UiComboBox:  fix overflow handling, UiLocalDateField: fix default suggestion date, fix hover highlighting

--- a/teamapps-client/less/trivial-components/combobox.less
+++ b/teamapps-client/less/trivial-components/combobox.less
@@ -41,6 +41,8 @@
     flex: 1 1 auto;
     display: flex;
     align-items: stretch;
+    position: relative;
+    overflow: hidden;
 
     .tr-combobox-selected-entry-wrapper {
       overflow: hidden;
@@ -57,21 +59,23 @@
     }
 
     .tr-combobox-editor {
-      flex: 1 1 auto;
       border: none;
       outline: none;
       background-color: transparent;
       z-index: 1;
       font-family: @tr-editor-font-family;
       font-size: @tr-editor-font-size;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
     }
   }
 
   &.editor-hidden .tr-combobox-editor {
-    width: 0;
-    height: 0;
-    position: absolute;
-    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
   }
 
   &:not(.editor-hidden) .tr-combobox-selected-entry-wrapper {
